minio/base/minio-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  labels:
    app: minio-app
    app.kubernetes.io/component: minio-s3
    app.kubernetes.io/name: minio
    app.kubernetes.io/part-of: S3_SUBSYSTEM
    app.openshift.io/runtime: S3
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: minio
  template:
    metadata:
      labels:
        app.kubernetes.io/name: minio
    spec:
      containers:
      # - command:
      #   - /bin/sh
      #   - -c
      #   - |
      #     mkdir -p /data/thanos && \
      #     mkdir -p /data/loki && \
      #     /usr/bin/minio server /storage
        resources:
          limits:
            cpu: 250m
            memory: 1Gi
          requests:
            cpu: 20m
            memory: 100Mi
        readinessProbe:
          tcpSocket:
            port: 9000
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        terminationMessagePath: /dev/termination-log
        image: quay.io/minio/minio:RELEASE.2023-06-19T19-52-50Z
        args:
          - server
          - /data
          - --console-address
          - :9090
        name: minio
        livenessProbe:
          tcpSocket:
            port: 9000
          initialDelaySeconds: 30
          timeoutSeconds: 1
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        ports:
        - containerPort: 9000
        imagePullPolicy: IfNotPresent
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: minio-pvc
      restartPolicy: Always
