minio/base/minio-svc.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: minio
# spec:
#   ports:
#   - port: 9000
#   selector:
#     app.kubernetes.io/name: minio


apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: minio
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: api
      protocol: TCP
      port: 9000
      targetPort: 9000
    - name: ui
      protocol: TCP
      port: 9090
      targetPort: 9090
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app.kubernetes.io/name: minio
