minio/base/minio-route.yaml
# apiVersion: route.openshift.io/v1
# kind: Route
# metadata:
#   name: minio
#   namespace: minio
#   labels:
#     app: minio
# spec:
#   to:
#     kind: Service
#     name: minio
#     weight: 100
#   port:
#     targetPort: 9000
#   tls:
#     termination: edge
#     insecureEdgeTerminationPolicy: Redirect


apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minio-api
  namespace: minio
spec:
  to:
    kind: Service
    name: minio
    weight: 100
  port:
    targetPort: api
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minio-ui
  namespace: minio
spec:
  to:
    kind: Service
    name: minio-service
    weight: 100
  port:
    targetPort: ui
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
